syntax = "proto3";

package auth;

option go_package = "github.com/erikwahlberger/veil-auth/pkg/grpc/auth";

service AuthService {
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
  rpc Validate(ValidateRequest) returns (ValidateResponse);
}

message AuthenticateRequest {
  string username = 1;
  string password = 2;
}

message AuthenticateResponse {
  string token = 1;
}

message ValidateRequest {
  string token = 1;
}

message ValidateResponse {
  bool valid = 1;
  string user_id = 2;
}
